exports[`(.not).toHaveRequestHeaderFieldsTooLargeStatus > using axios > .not.toHaveRequestHeaderFieldsTooLargeStatus > fails when response have status code 431 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveRequestHeaderFieldsTooLargeStatus()</intensity>

Expected status code to not be 431 received:
  <red>431</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 431,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveRequestHeaderFieldsTooLargeStatus > using axios > .toHaveRequestHeaderFieldsTooLargeStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveRequestHeaderFieldsTooLargeStatus()</intensity>

Expected status code to be 431 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
